@@ -56,6 +56,7 @@ Changes for v2.00
 - Add support for using device upgrade functions in the keymove editor (Greg)
 - Fix KM file filtering in Device Upgrade Editor open file dialog (Greg)
 - Fix key code keymove support (Greg)
+- Add installed upgrade selector to keymove editor, for upgrades that aren't assigned to a device button (Greg)
 
 Changes for v1.99b
 - Add support for warnings etc. below table without hiding the buttons, move device upgrade bug warning back down (Graham)
